# Rust-Portfolio-Api

./: .env  Cargo.toml  Dockerfile  Procfile  README.md  copia.env-copia  env-original  package-lock.json
migrations/2022-06-24-210351_projects/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
