[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
actix-cors = "0.6"
env_logger = "0.9"